--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ title: Daniel Nikolovski | Web / UX / SEO
       </figcaption>
     </figure>
   </a>
-  <div class="box bagasell pfcard">
+  <a class="box bagasell pfcard" href="bagasell">
     <figure>
     <img class="portfolioItem" src="img/masonryitems/bagasell.png" alt="">
       <figcaption>
@@ -48,7 +48,7 @@ title: Daniel Nikolovski | Web / UX / SEO
         <span>Design &amp; Management</span>
       </figcaption>
     </figure>
-  </div>
+  </a>
   <a class="box alldindauti pfcard" href="alldindauti">
     <figure>
     <img class="portfolioItem" src="img/masonryitems/alldindauti.png" alt="">
