--- a/alldindauti/index.html
+++ b/alldindauti/index.html
@@ -1,6 +1,8 @@
 ---
 layout: page
 title: Daniel Nikolovski | Alldin Dauti VFX Artist
+next_page: 'slugfeast'
+previous_page: 'bagasell'
 ---
 <div class="row">
   <div class="col-lg-4">
