--- a/bagasell/index.html
+++ b/bagasell/index.html
@@ -1,6 +1,8 @@
 ---
 layout: page
 title: Daniel Nikolovski | Bagasell
+next_page: 'alldindauti'
+previous_page: 'fifa'
 ---
 <div class="row">
   <div class="col-lg-4">
