--- a/fifa/index.html
+++ b/fifa/index.html
@@ -1,6 +1,8 @@
 ---
 layout: page
 title: Daniel Nikolovski | Fifa
+next_page: 'bagasell'
+previous_page: 'lemonbite'
 ---
 <div class="row">
   <div class="col-lg-4">
