--- a/freespinbonanza/index.html
+++ b/freespinbonanza/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Daniel Nikolovski | Freespin Bonanza
+previous_page: 'tjanster'
 ---
 <div class="row">
   <div class="col-lg-4">
