--- a/lemonbite/index.html
+++ b/lemonbite/index.html
@@ -1,6 +1,8 @@
 ---
 layout: page
 title: Daniel Nikolovski | Lemonbite
+next_page: 'fifa'
+previous_page: 'priside'
 ---
 <div class="row">
   <div class="col-lg-4">
