--- a/peterlandgren/index.html
+++ b/peterlandgren/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Daniel Nikolovski | Peter Landgren & co
+next_page: 'priside'
 ---
 <div class="row">
 	<div class="col-lg-4">
