--- a/slugfeast/index.html
+++ b/slugfeast/index.html
@@ -1,6 +1,8 @@
 ---
 layout: page
 title: Daniel Nikolovski | Slugfeast
+next_page: 'tjanster'
+previous_page: 'alldindauti'
 ---
 <div class="row">
   <div class="col-lg-4">
