--- a/tjanster/index.html
+++ b/tjanster/index.html
@@ -1,6 +1,8 @@
 ---
 layout: page
 title: Daniel Nikolovski | Tjänster
+next_page: 'freespinbonanza'
+previous_page: 'slugfeast'
 ---
 <div class="row">
   <div class="col-lg-4">
