added anton sander to slugfeast

--- a/slugfeast/index.html
+++ b/slugfeast/index.html
@@ -13,7 +13,7 @@ previous_page: 'alldindauti'
     <p>To allow Arduino to communicate with the browser, socket.io was one of the very few options that were available.</p>
     <p>A non-Arduino version of this game can be found <a href="{{ site.baseurl }}/sites/slugfeast">here</a>. Use
     space to shoot, and up/down arrows to control the angle.</p>
-
+    <p>Drawing &amp; Graphics by <a href="http://antonsander.tumblr.com/" target="_blank">Anton Sander</a></p>
     <img src="{{ "/img/work/slugfeast/arduino.jpg" | prepend: site.baseurl }}" alt="Arduino game" class="full-width-img">
   </div>      
   <div class="col-lg-8">
