--- a/slugfeast/index.html
+++ b/slugfeast/index.html
@@ -6,7 +6,7 @@ previous_page: 'alldindauti'
 ---
 <div class="row">
   <div class="col-lg-4">
-    <p>Slugfeast is a HTML5 game from the Arduino class during my Interaction Design studies.</p>
+    <p>Slugfeast is a HTML5 game I developed using <a href="http://phaser.io/" target="_blank">phaser.io</a> during my Interaction Design studies.</p>
     <p>After picking up the basics of Arduino coding, we decided to use it as a game controller.
     We knew it would be a huge challenge since Arduino doesn't serially communicate to the browser.
     This is when I learned the basics of node.js and socket.io.</p>
