--- a/fredholms/index.html
+++ b/fredholms/index.html
@@ -41,7 +41,7 @@
         <img class="menuclose" src="http://danielnikolovski.com/fredholms/menuclose.svg">
       </span>
 
-      <nav class="mobile-navigation">
+      <nav class="mobile-navigation visible-xs">
         <a href="">Krog</a>
         <a href="">Mat och Vinbar</a>
         <a href="">Catering</a>
