--- a/fredholms/index.html
+++ b/fredholms/index.html
@@ -204,7 +204,7 @@
 
 <div class="clear"></div>
 
-<div class="footer">
+<div class="footer hidden-lg">
   <div class="wrap">
     <span>
       &copy;&nbsp;2014&nbsp;Fredholms Matkonst AB
@@ -219,6 +219,14 @@
 </div><!-- .footer -->
 
 
+<div class="footer visible-lg">
+  <div class="wrap">
+    <span>
+      &copy;&nbsp;2014&nbsp;Fredholms Matkonst AB&nbsp;&#124;&nbsp;Blekingevägen 6&#44;&nbsp;      291 45&nbsp;Kristianstad&nbsp;&#124;&nbsp;Tel&#58;&nbsp;044-12 07 00&nbsp;&#124;&nbsp;Fax&#58;&nbsp;044-12 07 02&nbsp;&#124;&nbsp;<a href="mailto:mat@fredholms.com">mat@fredholms.com</a><br />Vi innehar F-skattebevis och använder äkta vispgrädde i såserna.    </span>
+    <div class="clear"></div>
+
+  </div><!-- .wrap -->
+</div><!-- .footer -->
 
 <script type="text/javascript">
 var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-47557195-1']);_gaq.push(['_trackPageview']);(function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();</script>
