--- a/bagasell/index.html
+++ b/bagasell/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: Daniel Nikolovski | Bagasell
-next_page: 'alldindauti'
-previous_page: 'fifa'
+next_page: 'fifa'
+previous_page: 'alldindauti'
 ---
 <div class="row">
   <div class="col-lg-4">
