--- a/freespinbonanza/index.html
+++ b/freespinbonanza/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Daniel Nikolovski | Freespin Bonanza
-previous_page: 'tjanster'
+previous_page: 'fifa'
 ---
 <div class="row">
   <div class="col-lg-4">
