--- a/lemonbite/index.html
+++ b/lemonbite/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Daniel Nikolovski | Lemonbite
-next_page: 'fifa'
+next_page: 'alldindauti'
 previous_page: 'priside'
 ---
 <div class="row">
