--- a/alldindauti/index.html
+++ b/alldindauti/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: Daniel Nikolovski | Alldin Dauti VFX Artist
-next_page: 'slugfeast'
-previous_page: 'bagasell'
+next_page: 'bagasell'
+previous_page: 'lemonbite'
 ---
 <div class="row">
   <div class="col-lg-4">
