--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Daniel Nikolovski | Web / UX / SEO
+title: Daniel Nikolovski | Webb / UX / SEO
 ---
 
 <div class="colWrapper">
