--- a/sirius/index.html
+++ b/sirius/index.html
@@ -16,7 +16,7 @@
 <meta content="sv" http-equiv="refresh">
 <meta content="noarchive" name="robots">
 <link href="sirius.css" rel="stylesheet" type="text/css">
-<link href="http://freespinbonanza.com/sirius/mobile.css" rel="stylesheet" type="text/css">
+<link href="http://danielnikolovski.com/sirius/mobile.css" rel="stylesheet" type="text/css">
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
 
@@ -34,7 +34,7 @@
   </script>
 
   <header class="cf">
-    <img class="logo" src="http://freespinbonanza.com/sirius/logo.png">
+    <img class="logo" src="http://danielnikolovski.com/sirius/logo.png">
     <div class="menuicon">
       <span>Meny</span>
     </div>
@@ -59,7 +59,7 @@
         </p>
       </div>
       <div class="col-xs-12">
-        <img src="http://freespinbonanza.com/sirius/uffe.jpg" class="fullwidth">
+        <img src="http://danielnikolovski.com/sirius/uffe.jpg" class="fullwidth">
       </div>
       <div class="col-xs-12">
 				<p>Vår vänliga och trevliga personal
@@ -71,7 +71,7 @@
 				Välkommen in till oss!<br>
 				Ulf Nietosvuori med personal.<br>
 				</p>
-        <p class="vises">Vi ses på</p><img class="vises" src="http://freespinbonanza.com/sirius/facebook.png">
+        <p class="vises">Vi ses på</p><img class="vises" src="http://danielnikolovski.com/sirius/facebook.png">
         <h3>Förfrågan och anmälan tel. 0418-10226</h3>
       </div>
     </div>
@@ -107,7 +107,7 @@
         <div class="col-xs-12 miniblock">
           <h2>Höstens program ute</h2>
           <p>Läs mer..</p>
-          <img class="halfwidth" src="http://freespinbonanza.com/sirius/whisky.jpg">
+          <img class="halfwidth" src="http://danielnikolovski.com/sirius/whisky.jpg">
         </div>
       </div>
     </div>
