--- a/spot/index.html
+++ b/spot/index.html
@@ -16,7 +16,7 @@
 <meta name="keywords" content="spot, restaurang, malmö, italiensk, italien, catering, takeaway, pizza, vedugn, vedugnsbakad pizza, pasta, färsk pasta, ciabatta, panini, sallad, lunch" />
 
 <link rel="stylesheet" type="text/css" media="all" href="/styles/spot.css" />
-<link rel="stylesheet" type="text/css" media="all" href="http://freespinbonanza.com/spot/mobilt.css" />
+<link rel="stylesheet" type="text/css" media="all" href="http://danielnikolovski.com/spot/mobilt.css" />
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 <script src="/scripts/jquery-1.4.2.js" type="text/javascript"></script>
@@ -44,7 +44,7 @@
 
 <div class="Decoration">
 	<div class="Images">
-    <img class="hamburger" src="http://freespinbonanza.com/spot/menutoggler.svg">
+    <img class="hamburger" src="http://danielnikolovski.com/spot/menutoggler.svg">
 		<span class="mobspan">MENY</span>
   </div>
 	<div class="Menu">
