added siriusrestaurangen, changed to material colors

--- a/alldindauti/index.html
+++ b/alldindauti/index.html
@@ -1,8 +1,7 @@
 ---
 layout: page
 title: Daniel Nikolovski | Alldin Dauti VFX Artist
-next_page: 'bagasell'
-previous_page: 'lemonbite'
+previous_page: 'fifa'
 ---
 <div class="row">
   <div class="col-lg-4">
