--- a/bagasell/index.html
+++ b/bagasell/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Daniel Nikolovski | Bagasell
 next_page: 'fifa'
-previous_page: 'alldindauti'
+previous_page: 'lemonbite'
 ---
 <div class="row">
   <div class="col-lg-4">
