--- a/fifa/index.html
+++ b/fifa/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Daniel Nikolovski | Fifa
-next_page: 'freespinbonanza'
+next_page: 'alldindauti'
 previous_page: 'bagasell'
 ---
 <div class="row">
