--- a/freespinbonanza/index.html
+++ b/freespinbonanza/index.html
@@ -1,7 +1,8 @@
 ---
 layout: page
 title: Daniel Nikolovski | Freespin Bonanza
-previous_page: 'fifa'
+previous_page: 'peterlandgren'
+next_page: 'lemonbite'
 ---
 <div class="row">
   <div class="col-lg-4">
