--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@ title: Daniel Nikolovski | Webb / UX / SEO
 ---
 
 <div class="colWrapper">
+  <div class="box siriusrestaurangen pfcard">
+    <figure>
+    <span class="kmrsnart">Lanseras snart!</span>
+    <img class="portfolioItem" src="img/masonryitems/siriusrestaurangen.svg" alt="Siriusrestaurangen">
+      <figcaption>
+        <h3>Siriusrestaurangen</h3>
+        <span>WP design &amp; utveckling</span>
+      </figcaption>
+    </figure>
+  </div>
   <div class="box plockepinn pfcard">
     <figure>
     <span class="kmrsnart">Lanseras snart!</span>
-    <img class="portfolioItem" src="img/masonryitems/plockepinn.png" alt="">
+    <img class="portfolioItem" src="img/masonryitems/plockepinn.png" alt="Plockepinn">
       <figcaption>
         <h3>Plockepinn</h3>
         <span>Responsiv design</span>
@@ -17,7 +27,7 @@ title: Daniel Nikolovski | Webb / UX / SEO
   <div class="box glorias pfcard">
     <figure>
     <span class="kmrsnart">Lanseras snart!</span>
-    <img class="portfolioItem" src="img/masonryitems/glorias.png" alt="">
+    <img class="portfolioItem" src="img/masonryitems/glorias.png" alt="Glorias">
       <figcaption>
         <h3>Glorias</h3>
         <span>Mobilanpassning</span>
@@ -26,43 +36,34 @@ title: Daniel Nikolovski | Webb / UX / SEO
   </div>
   <a class="box landgren pfcard" href="peterlandgren">
       <figure>
-      <img class="portfolioItem" src="img/masonryitems/peterlandgren.svg" alt="">
+      <img class="portfolioItem" src="img/masonryitems/peterlandgren.svg" alt="Peter Landgren">
         <figcaption>
           <h3>Peter Landgren &amp; co</h3>
           <span>Responsiv design</span>
         </figcaption>
       </figure>
   </a>
-  <a class="box priside pfcard" href="priside">
+  <a class="box freespinbonanza pfcard" href="freespinbonanza">
     <figure>
-    <img class="portfolioItem priside" src="img/masonryitems/priside.svg" alt="">
+    <img class="portfolioItem freespinbonanzaimg" src="img/masonryitems/freespinbonanza.svg" alt="Freespin Bonanza">
       <figcaption>
-        <h3>Prisidé</h3>
-        <span>Integration &amp; Mobil utveckling</span>
+        <h3>Freespin Bonanza</h3>
+        <span>Design &amp; WP Utveckling</span>
       </figcaption>
     </figure>
   </a>
-  <a class="box lemonbite pfcard" href="lemonbite">
+    <a class="box lemonbite pfcard" href="lemonbite">
     <figure>
-    <img class="portfolioItem" src="img/masonryitems/lemonbite.png" alt="">
+    <img class="portfolioItem" src="img/masonryitems/lemonbite.png" alt="Lemonbite">
       <figcaption>
         <h3>Lemonbite</h3>
         <span>Design &amp; Utveckling</span>
       </figcaption>
     </figure>
   </a>
-  <a class="box alldindauti pfcard" href="alldindauti">
-    <figure>
-    <img class="portfolioItem" src="img/masonryitems/alldindauti.png" alt="">
-      <figcaption>
-        <h3>Alldin Dauti</h3>
-        <span>Design &amp; Utveckling</span>
-      </figcaption>
-    </figure>
-  </a>
   <a class="box bagasell pfcard" href="bagasell">
     <figure>
-    <img class="portfolioItem" src="img/masonryitems/bagasell.png" alt="">
+    <img class="portfolioItem" src="img/masonryitems/bagasell.png" alt="Bagasell">
       <figcaption>
         <h3>Bagasell</h3>
         <span>Design &amp; Projektledning</span>
@@ -71,20 +72,21 @@ title: Daniel Nikolovski | Webb / UX / SEO
   </a>
   <a class="box fifa pfcard" href="fifa">
     <figure>
-    <img class="portfolioItem" src="img/masonryitems/fifa.png" alt="">
+    <img class="portfolioItem" src="img/masonryitems/fifa.png" alt="Fifa companion app">
       <figcaption>
         <h3>Fifa Companion App</h3>
         <span>Design &amp; Utveckling</span>
       </figcaption>
     </figure>
   </a>
-  <a class="box freespinbonanza pfcard" href="freespinbonanza">
+  <a class="box alldindauti pfcard" href="alldindauti">
     <figure>
-    <img class="portfolioItem freespinbonanzaimg" src="img/masonryitems/freespinbonanza.svg" alt="">
+    <img class="portfolioItem" src="img/masonryitems/alldindauti.png" alt="Alldin Dauti VFX">
       <figcaption>
-        <h3>Freespin Bonanza</h3>
-        <span>Design &amp; WP Utveckling</span>
+        <h3>Alldin Dauti</h3>
+        <span>Design &amp; Utveckling</span>
       </figcaption>
     </figure>
   </a>
+
 </div>
