--- a/lemonbite/index.html
+++ b/lemonbite/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: Daniel Nikolovski | Lemonbite
-next_page: 'alldindauti'
-previous_page: 'priside'
+next_page: 'bagasell'
+previous_page: 'freespinbonanza'
 ---
 <div class="row">
   <div class="col-lg-4">
