change in glorias

--- a/glorias/index.html
+++ b/glorias/index.html
@@ -15,7 +15,7 @@ next_page: 'peterlandgren'
         <img src="{{ "/img/work/glorias/glorias.jpg" | prepend: site.baseurl }}" class="floated-img-left thirtyimg" alt="">
 
     <img src="{{ "/img/work/glorias/gloriasopenmenu.jpg" | prepend: site.baseurl }}" class="floated-img-right thirtyimg" alt="">
-    <p>Jag kom i kontakt med Glorias, en av lunds kändaste restauranger. <br>Efter en kopp kaffe med deras grafiska designer och en av delägarna, rådde det ingen tvekan om att vi skulle mobilanpassa sidan.</p>
+    <p>Jag kom i kontakt med Glorias, en av Lunds mest kända restauranger. <br>Efter en kopp kaffe med deras grafiska designer och en av delägarna, rådde det ingen tvekan om att vi skulle mobilanpassa sidan.</p>
     <p>Med en första skiss föreslog jag vilka delar som är viktiga att lyfta fram för en mobil besökare:</p>
     <ul class="postul">
         <li><p>Man ska snabbt kunna se öppettiderna.</p></li>
