small about change

--- a/om/index.html
+++ b/om/index.html
@@ -6,7 +6,7 @@ active: om
 
 <h1 class="postheader">Vem är jag?</h1>
 
-<p class="cool">Jag skapar genomtänkta digitala lösningar som inspirerar dina potentiella kunder att stanna tills de hittar det de kom för.</p>
+<p class="cool">Jag skapar genomtänkta digitala lösningar som inspirerar dina potentiella kunder att stanna tills de hittar det dem söker.</p>
 
 <p>Mitt intresse för webbdesign började när jag var 15 år. Vad som höll kvar intresset är att jag älskar att lösa problem och skapa saker som gör inverkan på folks liv.</p>
 
