small change header

--- a/om/index.html
+++ b/om/index.html
@@ -14,7 +14,7 @@ active: om
 
 <p>När jag inte jobbar umgås jag med min fantastiska flickvän som ofta bidrar med kreativa ideér, spelar tennis (vilket jag egentligen är usel på), spelar tv-spel och springer maratonlopp (yeah right).</p>
 
-<h2 class="postheader">Vad du får när du anlitar mig</h2>
+<h2 class="postheader">När du anlitar mig får du</h2>
 <ul class="postul">
 <li><p>Någon som värnar om ditt varumärke.</p></li>
 <li><p>Någon som gör ett helhjärtat jobb.</p></li>
