git commit small change

--- a/om/index.html
+++ b/om/index.html
@@ -18,7 +18,7 @@ active: om
 <ul class="postul">
 <li><p>Någon som värnar om ditt varumärke.</p></li>
 <li><p>Någon som gör ett helhjärtat jobb.</p></li>
-<li><p>Massor med skoj.</p></li>
+<li><p>Massor av skoj.</p></li>
 <li><p>Någon som har förståelse för dina kunder.</p></li>
 <li><p>Någon som mer än gärna delar med sig av sin kunskap.</p></li>
 <li><p>Någon som du kan vända dig till efter projektets gång för tips och ideér eller kanske bara för att ta en kaffe på stan.</p></li>
