--- a/om/index.html
+++ b/om/index.html
@@ -8,7 +8,7 @@ active: om
 
 <p class="cool">Jag skapar genomtänkta digitala lösningar som inspirerar dina potentiella kunder att stanna tills de hittar det dem söker.</p>
 
-<p>Mitt intresse för webbdesign började när jag var 15 år. Vad som höll kvar intresset är att jag älskar att lösa problem och skapa saker som gör inverkan på folks liv.</p>
+<p>Mitt intresse för webbdesign började när jag var 15 år. Vad som höll kvar intresset är att jag älskar att lösa problem och skapa saker som gör inverkan på människors liv.</p>
 
 <p>Emellanåt hänger jag gärna till på olika design communitys och hjälper andra designers med diverse problem, vilket inte minst ger även mig själv en hel del ny kunskap. Bland annat på IRC, <a href="https://www.codementor.io/danneniko" target="blank">Codementor</a> &amp; sociala medier.</p>
 
